--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ opacity: 1;
 
 .trs{
     animation-name: movingImg, movingImg2;  
-    animation-duration: 5s; 
+    animation-duration: 6s; 
     animation-delay: 4s;     
     animation-iteration-count: infinite;
     animation-direction: alternate;    
@@ -312,39 +312,8 @@ opacity: 1;
     filter:alpha(opacity=100)!important;
 }
 
+/**********************************Animations**********************************/
 
-.bola1 {
-    border-radius: 50%;    
-    top: 700px;
-	left: 1265px;
-	width: 12px;
-	height: 12px;    
-    background-color: #A8B4B1;
-	position: fixed;
-	display:inline-block;
-	animation-name: ballgreen;  
-    animation-duration: 5s; 
-    animation-delay: 4s;     
-    animation-iteration-count: infinite;
-    animation-direction: alternate;   
-	
-}
-
-.bola2 {
-    border-radius: 50%;    
-    top: 700px;
-	left: 1280px;
-	width: 12px;
-	height: 12px;    
-    background-color: #1ABC9C;
-	position: fixed;
-	display:inline-block;
-	animation-name: ballgray;  
-    animation-duration: 2s; 
-    animation-delay: 5s;     
-    animation-iteration-count: infinite;       	
-	
-}
 
 @keyframes movingImg {
     100% {
